# idea2.0

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/api/: main.py
app/web/: .prettierignore  package.json  pnpm-lock.yaml
app/web/app/: globals.css  layout.tsx
app/web/app/charts/: RiskHeatmap.tsx  SeverityChart.tsx  TrendChart.tsx
app/web/app/components/: ExecutiveSummary.tsx  Header.tsx  MitigationPanel.tsx  RiskCard.tsx  Sidebar.tsx  ThreatFeed.tsx
app/web/app/graphs/: AttackAnimation.tsx  GraphUtils.ts  PropagationGraph.tsx
app/web/app/hooks/: useSimulationData.ts  useThreatFeed.ts
app/web/app/pages/: Dashboard.tsx  ThreatDetails.tsx
app/web/app/services/: apiService.ts  websocketService.ts
app/web/app/utils/: constants.ts  formatters.ts
