[project]
name = "idea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
