[project]
name = "idea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ── Pyright ───────────────────────────────────────────────────────────────────

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["app/api"]
